<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/StateView"
            android:text="@string/StateInfo"/>
        <Button
            android:id="@+id/xmppBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/xmppBtn"/>
        <Button
            android:id="@+id/matrixBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/matrixBtn"/>
        <Button
            android:id="@+id/SocialBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/SocialBtn"/>
        <Button
            android:id="@+id/NewsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/NewsBtn"/>
        <Button
            android:id="@+id/RssBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/RssBtn"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>