<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context="org.disroot.disrootapp.ui.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Contribute Code -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarStyle"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half">

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Contribute"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ContributeText"/>

                <Button
                    android:id="@+id/ContributeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/ContributeBtn"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Translate -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarStyle"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half">

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Translate"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TranslateText"/>

                <Button
                    android:id="@+id/TranslateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/TranslateBtn"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Give Feedback -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarStyle"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half">

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Feedback"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FeedbackText"/>

                <Button
                    android:id="@+id/FeedbackBtn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/FeedbackBtn1"/>
                <Button
                    android:id="@+id/FeedbackBtn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/FeedbackBtn2"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Spread the Word -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarStyle"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half">

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SpreadTheWord"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/fragment_about__spread_the_word_text"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SpreadTheWordTxt"/>

                <!--<Button
                    android:id="@+id/SpreadTheWordBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/SpreadTheWordBtn"/>-->
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>