<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/WelcomeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/WelcomeTitle"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/WelcomeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:gravity="left"
        android:text="@string/WelcomeInfo"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >
        <Button
            android:id="@+id/homeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reload"
            android:text="@string/action_home"
            android:layout_margin="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</LinearLayout>